javascript/ql/test/query-tests/NodeJS/InvalidExport/tst3b.js
// OK: useless assignment flagged by other query
module.exports = exports = { a: 23 };
